--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -23,6 +23,7 @@ html {
   min-width: 316px;
   min-height: 100%;
   font-size: 16px;
+  // background-color: antiquewhite;
 }
 
 img {
@@ -173,6 +174,14 @@ input {
     color: var(--color-blue);
   }
 
+  &--help-form {
+    margin-bottom: 30px;
+
+    @include mobile {
+      padding: 0 15px;
+    }
+  }
+
   @include small-tablet {
     font-size: 32px;
     line-height: 120%;
@@ -180,7 +189,7 @@ input {
 
   @include mobile {
     margin-bottom: 10px;
-    font-size: 28px;
+    font-size: 26px;
     line-height: 120%;
 
     &--inter {
@@ -221,6 +230,14 @@ input {
     }
   }
 
+  &--help-form {
+    margin-bottom: 10px;
+
+    @include mobile {
+      padding: 0 15px;
+    }
+  }
+
   @include mobile {
     font-size: 16px;
     line-height: 120%;
@@ -229,6 +246,13 @@ input {
 
 .descr--center {
   text-align: center;
+}
+
+.btn-reset {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .btn {
@@ -265,11 +289,4 @@ input {
   @include mobile {
     padding: 10px 30px;
   }
-}
-
-.btn-reset {
-  border: none;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
 }
