--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages section-offset">
   <div class="container">
     <h2 class="title title--adv title--center">Преимущества бронирования онлайн</h2>
     <p class="descr descr--center">Экономьте время и деньги, выбирая лучшее</p>
