--- a/src/partials/tour-selection.html
+++ b/src/partials/tour-selection.html
@@ -1,4 +1,4 @@
-<section class="tour-selection">
+<section class="tour-selection section-offset">
   <div class="container">
     <h2 class="title">Подбор тура по направлениям</h2>
   <ul class="list-reset sliders">
