--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import "./components/advantages";
 @import "./components/tour-selection";
 @import "./components/help-form";
+@import "./components/best-fares";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
@@ -28,3 +29,5 @@
 @import "./components/tours";
 @import "./components/hero";
 @import "./components/form-field";
+@import "./components/slider-nav";
+@import "./components/catalog";
