--- a/src/partials/slider-main.html
+++ b/src/partials/slider-main.html
@@ -1,4 +1,4 @@
-<section class="slader-swiper">
+<section class="slader-swiper section-offset">
   <div class="container slider-container">
     <div class="swiper-container">
       <div class="swiper-wrapper hero-slider">
