--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -91,6 +91,14 @@ input {
   clip: rect(0 0 0 0);
 }
 
+.section-offset {
+  padding-top: 80px;
+
+  @include mobile {
+    padding-top: 60px;
+  }
+}
+
 .container {
   margin: 0 auto;
   padding: 0 var(--container-offset);
@@ -157,7 +165,7 @@ input {
   color: var(--color-ebony);
 
   &--adv {
-    margin-bottom: 10px;
+    margin-bottom: 10px !important;
   }
 
   &--inter {
@@ -183,12 +191,12 @@ input {
   }
 
   @include small-tablet {
-    font-size: 32px;
+    font-size: 28px;
     line-height: 120%;
   }
 
   @include mobile {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     font-size: 26px;
     line-height: 120%;
 
@@ -289,4 +297,31 @@ input {
   @include mobile {
     padding: 10px 30px;
   }
+}
+
+.swiper-slide--wrapper {
+  padding: 0 0 18px;
+  height: auto;
+}
+
+.icon-star {
+  margin-right: 5px;
+  width: 16px;
+  height: 16px;
+  fill: var(--color-primary);
+}
+
+.scale {
+  display: inline-block;
+  overflow: hidden;
+  border-radius: 3px 3px 0 0;
+}
+
+.scale img {
+  display: block;
+  transition: 1s;
+}
+
+.scale img:hover {
+  transform: scale(1.2);
 }
