--- a/src/scss/components/search-filtr/_departure.scss
+++ b/src/scss/components/search-filtr/_departure.scss
@@ -1,36 +1,12 @@
 .departure {
-  position: relative;
-  z-index: 3;
-  flex-grow: 1;
-  width: 100%;
-  max-width: 100%;
+  border: 1px solid var(--color-rinse);
+  border-radius: 8px 0 0 8px;
+  height: 64px;
+  background-color: var(--color-light);
+  transition: 0.3s;
+  user-select: none;
 
-  &__main {
-    border: 1px solid var(--color-rinse);
-    border-radius: 8px 0 0 8px;
-    height: 64px;
-    background-color: var(--color-light);
-    transition: 0.3s;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-
-    &:hover {
-      border: 1px solid var(--color-great);
-      border-radius: 8px;
-      transition: 0.3s;
-    }
-
-    @include tablet {
-      border-radius: 8px 0 0 8px;
-    }
-
-    @include mobile {
-      border-radius: 8px 8px 0 0;
-    }
-  }
-
-  &__pinput {
+  &__input {
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -59,6 +35,20 @@
     overflow-x: hidden;
     overflow-y: scroll;
     max-height: 356px;
+  }
+
+  &:hover {
+    border: 1px solid var(--color-great);
+    border-radius: 8px;
+    transition: 0.3s;
+  }
+
+  @include tablet {
+    border-radius: 8px 0 0 8px;
+  }
+
+  @include mobile {
+    border-radius: 8px 8px 0 0;
   }
 }
 
