--- a/src/scss/components/search-filtr/_where.scss
+++ b/src/scss/components/search-filtr/_where.scss
@@ -1,20 +1,32 @@
 .where {
   position: relative;
   border: 1px solid var(--color-rinse);
-  padding-top: 7px;
   height: 64px;
   background-color: var(--color-light);
   transition: 1s;
 
-  &__input-wrap {
+  &__input {
     position: relative;
     display: flex;
     align-items: flex-end;
-    border: none;
-    padding: 0 9px;
+    padding: 32px 10px 10px 16px;
     width: 165px;
-    height: 54px !important;
-    box-sizing: border-box;
+    height: 100%;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 20px;
+    transition: 0.3s;
+  }
+
+  &__title {
+    position: absolute;
+    left: 16px;
+    top: 8px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--color-great);
     transition: 0.3s;
   }
 
@@ -29,28 +41,6 @@
     border-radius: 8px;
     transition: 0.3s;
   }
-}
-
-.input {
-  &__name {
-    position: absolute;
-    left: 16px;
-    top: 8px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: var(--color-great);
-    transition: 0.3s;
-  }
-}
-
-.where-input {
-  flex-grow: 1;
-  margin-left: 6px;
-  height: 40px;
-  font-weight: 400;
-  font-size: 16px;
-  color: var(--color-ebony);
 }
 
 .where-drop {
