--- a/src/scss/components/_help-form.scss
+++ b/src/scss/components/_help-form.scss
@@ -34,14 +34,12 @@
     color: var(--color-ebony);
   }
 
-  &__field {
-    display: flex;
-    flex-direction: column-reverse;
-    height: 88px;
-    font-size: 14px;
+  &__input {
+    margin-bottom: 15px;
   }
 
   &__btn {
+    margin-top: 15px;
     padding: 11px 29px;
 
     @include minidesk {
