--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,7 +1,8 @@
 .hero {
   position: relative;
-  z-index: 2;
-  background-image: url(../img/hero.jpg);
+  z-index: 1;
+  background-image: url(../img/hero1.jpg);
+  background-position: 50%;
   background-size: cover;
   background-repeat: no-repeat;
 
