--- a/src/scss/components/search-filtr/_filtr.scss
+++ b/src/scss/components/search-filtr/_filtr.scss
@@ -2,6 +2,7 @@
   @include flex-h-center;
 
   position: relative;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
   cursor: pointer;
 
   &__item {
@@ -82,14 +83,6 @@
 .active {
   opacity: 1;
   visibility: visible;
-}
-
-.dropdown--hide {
-  position: absolute;
-  z-index: -1;
-  display: none;
-  opacity: 0;
-  visibility: hidden;
 }
 
 .dropdown__link {
