--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,8 @@
 @import "./components/tour-selection";
 @import "./components/help-form";
 @import "./components/best-fares";
+@import "./components/form-field";
+@import "./components/subscription";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
@@ -28,6 +30,6 @@
 @import "./components/mobile-menu";
 @import "./components/tours";
 @import "./components/hero";
-@import "./components/form-field";
+// @import "./components/form-field";
 @import "./components/slider-nav";
 @import "./components/catalog";
