--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,92 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer-top">
+      <span class="footer-top__link">
+        <a href="#">Агенствам
+          <svg class="footer-top__link-icon" aria-hidden="true">
+            <use xlink:href="img/sprite.svg#link"></use>
+          </svg>
+        </a>
+      </span>
+      <span class="footer-top__account">
+        <svg class="footer-top__user-icon" aria-hidden="true">
+            <use xlink:href="img/sprite.svg#user"></use>
+          </svg>
+        <span class="footer-top__caption">Личный кабинет</span>
+      </span>
+    </div>
+
+    <nav class="footer__menu">
+      <div class="footer-info">
+
+        <div class="footer-info__block">
+          <h3 class="footer-info__title">Каталог путешествий</h3>
+          <ul class="list-reset">
+            <li class="footer-info__item"><a href="#">Отели</a></li>
+            <li class="footer-info__item"><a href="#">Экскурсии</a></li>
+            <li class="footer-info__item"><a href="#">Санатории</a></li>
+            <li class="footer-info__item"><a href="#">Круизы</a></li>
+            <li class="footer-info__item"><a href="#">Авиабилеты</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-info__block">
+          <h3 class="footer-info__title">Информация</h3>
+          <ul class="list-reset">
+            <li class="footer-info__item"><a href="#">Проверка статуса заказа</a></li>
+            <li class="footer-info__item"><a href="#">Как оплатить тур</a></li>
+            <li class="footer-info__item"><a href="#">Страхование</a></li>
+            <li class="footer-info__item"><a href="#">Документы</a></li>
+            <li class="footer-info__item"><a href="#">Виза</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-info__block footer-info__block--width">
+          <h3 class="footer-info__title">О компании</h3>
+          <ul class="list-reset">
+            <li class="footer-info__item"><a href="#">Общая информация</a></li>
+            <li class="footer-info__item"><a href="#">Контакты</a></li>
+            <li class="footer-info__item"><a href="#">Наши награды</a></li>
+            <li class="footer-info__item"><a href="#">Отзывы</a></li>
+            <li class="footer-info__item"><a href="#">Вакансии</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-info__block">
+          <div class="footer-info__contact">
+            <h3 class="footer-info__title">Контакты</h3>
+            <a href="tel:78007755000">8 800 775 50 00</a>
+            <a href="tel:78007755000">8 800 775 50 10</a>
+          </div>
+          <div class="footer-info__social">
+            <h3 class="footer-info__title">Мы в соцсетях</h3>
+            <ul class="footer-social list-reset">
+              <li><a class="footer-social__icon footer-social__icon--vk" href="#"></a></li>
+              <li><a class="footer-social__icon footer-social__icon--tg" href="#"></a></li>
+              <li><a class="footer-social__icon footer-social__icon--zen" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </nav>
+    <div class="footer-bottom">
+      <div class="footer-bottom__partner">
+        <ul class="icon-partner list-reset">
+          <li class="icon-partner__atr icon-atr"></li>
+          <li class="icon-partner__rst icon-rst"></li>
+        </ul>
+        <ul class="icon-partner list-reset">
+          <li class="icon-partner__rustourism icon-rustourism"></li>
+          <li>
+            <ul class="list-reset">
+              <li>Мы в реестре туроператоров</li>
+              <li>ООО Тревелер <br> РТО 038486</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <small class="footer__copyrite">© 2023 Traveler | Все права защищены.</small>
+    </div>
+  </div>
 </footer>
