--- a/src/scss/components/_subscription.scss
+++ b/src/scss/components/_subscription.scss
@@ -1,6 +1,6 @@
 .subscription {
-  margin-bottom: 60px;
-
+  padding-bottom: 80px;
+  
   &__container {
     display: flex;
     align-items: center;
