--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2096,7 +2096,7 @@ input {
 }
 
 .subscription {
-  margin-bottom: 60px;
+  padding-bottom: 80px;
 }
 .subscription__container {
   display: -webkit-box;
@@ -2217,6 +2217,243 @@ input {
   height: 16px;
   background-image: url(../img/info.svg);
   background-repeat: no-repeat;
+}
+
+.footer {
+  background-color: #f6f8fa;
+}
+.footer__menu {
+  border-bottom: 1px solid var(--color-rinse);
+}
+.footer__copyrite {
+  margin-top: 30px;
+}
+
+.footer-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-rinse);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer-top__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer-top__link a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 26px;
+  color: var(--color-blue);
+}
+@media (max-width: 576px) {
+  .footer-top__link a {
+    font-size: 18px;
+  }
+}
+.footer-top__link:hover {
+  opacity: 0.7;
+}
+.footer-top__link-icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--color-blue);
+  -webkit-transition: fill 0.3s ease-in-out;
+  -o-transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease-in-out;
+}
+.footer-top__account {
+  cursor: pointer;
+}
+.footer-top__account:hover {
+  opacity: 0.7;
+}
+.footer-top__user-icon {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+  top: 3px;
+  fill: var(--color-blue);
+  -webkit-transition: fill 0.3s ease-in-out;
+  -o-transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease-in-out;
+}
+.footer-top__caption {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--color-blue);
+}
+
+.footer-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0;
+  padding: 20px 0;
+  width: 100%;
+}
+.footer-info__block {
+  margin-bottom: 24px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+@media (max-width: 768px) {
+  .footer-info__block--width {
+    width: 224px;
+  }
+}
+.footer-info__title {
+  margin: 0;
+  margin-bottom: 15px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 26px;
+  opacity: 0.5;
+}
+.footer-info__item {
+  margin-bottom: 6px;
+}
+.footer-info__item a {
+  color: var(--color-ebony);
+}
+.footer-info__item a:hover {
+  opacity: 0.7;
+}
+.footer-info__contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  margin-bottom: 10px;
+}
+.footer-info__contact a {
+  margin-bottom: 8px;
+  font-weight: 400;
+  font-size: 18px;
+  color: var(--color-blue);
+}
+.footer-info__contact a:hover {
+  opacity: 0.7;
+}
+@media (max-width: 768px) {
+  .footer-info {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: start;
+  }
+}
+
+.footer-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer-social__icon {
+  display: block;
+  width: 38px;
+  height: 38px;
+  margin-right: 10px;
+  -webkit-transition: -webkit-transform 180ms ease-in;
+  transition: -webkit-transform 180ms ease-in;
+  -o-transition: transform 180ms ease-in;
+  transition: transform 180ms ease-in;
+  transition: transform 180ms ease-in, -webkit-transform 180ms ease-in;
+}
+.footer-social__icon:hover {
+  -webkit-filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4) brightness(1);
+  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4) brightness(1);
+  -webkit-transform: scale(0.93);
+  -ms-transform: scale(0.93);
+  transform: scale(0.93);
+}
+.footer-social__icon--vk {
+  background: url(../img/vk.svg) no-repeat;
+}
+.footer-social__icon--tg {
+  background: url(../img/telegram.svg) no-repeat;
+}
+.footer-social__icon--zen {
+  margin-right: 0;
+  background: url(../img/y-zen.svg) no-repeat;
+}
+
+.footer-bottom {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer-bottom__partner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+@media (max-width: 576px) {
+  .footer-bottom__partner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+.icon-partner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.icon-partner__atr {
+  margin-right: 20px;
+  width: 180px;
+  height: 70px;
+  background: url(../img/atr.svg) no-repeat;
+  opacity: 0.7;
+}
+.icon-partner__rst {
+  width: 58px;
+  background: url(../img/rst.svg) no-repeat;
+  opacity: 0.7;
+}
+.icon-partner__rustourism {
+  width: 58px;
+  background: url(../img/rustourism.svg) no-repeat;
+  opacity: 0.7;
 }
 
 .account {
