--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "./components/best-fares";
 @import "./components/form-field";
 @import "./components/subscription";
+@import "./components/footer";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
@@ -30,6 +31,5 @@
 @import "./components/mobile-menu";
 @import "./components/tours";
 @import "./components/hero";
-// @import "./components/form-field";
 @import "./components/slider-nav";
 @import "./components/catalog";
