fix header and create button up

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,8 +12,7 @@
           <a class="header__nav-link" href="#">О компании</a>
 
           <div class="more">
-            <div class="more__dots">...</div>
-            <div class="more__wrapper">
+            <div class="more__dots touch-area">...
               <div class="more__menu">
                 <a href="#" class="more__menu-link"><span>Офисы продаж</span></a>
                 <a href="#" class="more__menu-link"><span>Вход для агентов</span></a>
@@ -58,18 +57,7 @@
     <nav class="nav">
       <ul class="nav__items nav__list list-reset">
         <li class="nav__item">
-          <div class="tours">
-            <a href="index.html" class="nav__link">Туры
-              <span class="nav__link--chevron"></span>
-            </a>
-            <div class="tours__wrapper">
-              <div class="tours__submenu">
-                <a href="#" class="tours__submenu-link"><span>Все туры</span></a>
-                <a href="#" class="tours__submenu-link"><span>Авто туры</span></a>
-                <a href="#" class="tours__submenu-link"><span>Туры на выходные</span></a>
-              </div>
-            </div>
-          </div>
+            <a href="index.html" class="nav__link">Туры</a>
         </li>
         <li class="nav__item">
           <a href="services.html" class="nav__link">Отели</a>
