--- a/app/css/main.css
+++ b/app/css/main.css
@@ -378,6 +378,92 @@ input {
   transform: scale(1.2);
 }
 
+.touch-area {
+  position: relative;
+}
+
+.touch-area::before {
+  content: "";
+  position: absolute;
+  left: -6px;
+  top: 4px;
+  display: block;
+  padding: 16px;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+.to-top {
+  position: fixed;
+  right: calc((100% - 1230px) / 2);
+  bottom: 0;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: var(--color-ebony);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+.to-top__text {
+  font-size: 14px;
+  opacity: 0;
+  visibility: hidden;
+}
+.to-top__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 4px;
+  width: 40px;
+  height: 40px;
+  background: var(--color-primary);
+  opacity: 0.7;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.to-top__icon svg {
+  width: 24px;
+  height: 24px;
+  fill: var(--color-light);
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.to-top__icon:hover {
+  background-color: var(--color-active);
+}
+.to-top:hover .to-top__text {
+  opacity: 1;
+  visibility: visible;
+}
+.to-top--active {
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 1440px) {
+  .to-top {
+    right: 20px;
+    bottom: 20px;
+  }
+}
+
 .header {
   position: relative;
   z-index: 10;
@@ -502,6 +588,7 @@ input {
 .more__dots {
   position: absolute;
   display: none;
+  width: 0;
   color: var(--color-light);
   cursor: pointer;
 }
@@ -509,26 +596,14 @@ input {
   .more__dots {
     display: block;
   }
-}
-.more__wrapper {
-  position: absolute;
-  display: none;
-  width: 25px;
-  height: 40px;
-  cursor: pointer;
-}
-.more__wrapper:hover .more__menu {
-  display: block;
-}
-@media (max-width: 1200px) {
-  .more__wrapper {
+  .more__dots:hover .more__menu {
     display: block;
   }
 }
 .more__menu {
   position: relative;
   right: 118px;
-  top: 39px;
+  top: 18px;
   z-index: 0;
   display: none;
   border-radius: 8px;
@@ -2617,18 +2692,6 @@ input {
   -o-transition-duration: 0.3s ease-in-out;
   transition-duration: 0.3s ease-in-out;
 }
-.nav__link--chevron {
-  padding-right: 20px;
-  background-image: url("../img/chevron.svg");
-  background-position: right center;
-  background-size: 16px 21px;
-  background-repeat: no-repeat;
-}
-@media (max-width: 768px) {
-  .nav__link--chevron {
-    display: none;
-  }
-}
 @media (max-width: 1200px) {
   .nav__link {
     font-size: 16px;
@@ -2810,41 +2873,6 @@ input {
   .nav__items-mobile {
     display: block;
   }
-}
-
-.tours__wrapper {
-  display: none;
-}
-.tours__submenu {
-  position: absolute;
-  top: 94px;
-  z-index: 0;
-  border-radius: 8px;
-  padding: 16px 18px;
-  width: 270px;
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.05), 0 10px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05), 0 10px 10px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-light);
-}
-.tours__submenu-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 9px 20px;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-.tours__submenu-link:hover {
-  background-color: var(--color-violet);
-}
-@media (max-width: 1024px) {
-  .tours__submenu {
-    top: 92px;
-  }
-}
-.tours:hover .tours__wrapper {
-  display: block;
 }
 
 .hero {
