--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,12 @@
 <footer class="footer">
+  <a href="#page" class="to-top">
+    <span class="to-top__icon">
+      <svg>
+        <use xlink:href="img/sprite.svg#to-top"></use>
+      </svg>
+    </span>
+    <span class="to-top__text">вверх</span>
+  </a>
   <div class="container">
     <div class="footer-top">
       <span class="footer-top__link">
@@ -10,8 +18,8 @@
       </span>
       <span class="footer-top__account">
         <svg class="footer-top__user-icon" aria-hidden="true">
-            <use xlink:href="img/sprite.svg#user"></use>
-          </svg>
+          <use xlink:href="img/sprite.svg#user"></use>
+        </svg>
         <span class="footer-top__caption">Личный кабинет</span>
       </span>
     </div>
@@ -55,8 +63,8 @@
         <div class="footer-info__block">
           <div class="footer-info__contact">
             <h3 class="footer-info__title">Контакты</h3>
-            <a href="tel:78007755000">8 800 775 50 00</a>
-            <a href="tel:78007755000">8 800 775 50 10</a>
+            <a href="tel:78007755000">8 800 475 50 00</a>
+            <a href="tel:78007755000">8 800 475 50 10</a>
           </div>
           <div class="footer-info__social">
             <h3 class="footer-info__title">Мы в соцсетях</h3>
