--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -325,3 +325,76 @@ input {
 .scale img:hover {
   transform: scale(1.2);
 }
+
+.touch-area {
+  position: relative;
+}
+
+.touch-area::before {
+  content: "";
+  position: absolute;
+  left: -6px;
+  top: 4px;
+  display: block;
+  padding: 16px;
+  box-sizing: content-box;
+
+}
+
+.to-top {
+  position: fixed;
+  right: calc((100% - 1230px) / 2);
+  bottom: 0;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--color-ebony);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+
+  &__text {
+    font-size: 14px;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    width: 40px;
+    height: 40px;
+    background: var(--color-primary);
+    opacity: 0.7;
+    transition: background-color 0.3s ease-in-out;
+
+    svg {
+      width: 24px;
+      height: 24px;
+      fill: var(--color-light);
+      object-fit: cover;
+    }
+
+    &:hover {
+      background-color: var(--color-active);
+    }
+  }
+
+  &:hover &__text {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &--active {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  @include big-desktop {
+    right: 20px;
+    bottom: 20px;
+  }
+}
